# jaxkan

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jaxkan/: __init__.py  mnist_load.py  mnist_train.py  model.py  pykan.py  toy_data.py  train.py  train_mnist.py  train_toy_data.py
