[project]
name = "jaxkan"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "jax[cpu]>=0.4.13",
    "pytest>=8.2.0",
    "chex>=0.1.7",
    "pykan>=0.0.2",
    "torch>=2.3.0",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.7.5",
    "tqdm>=4.66.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
